//
//  TypeOfGame.swift
//  Loterias-Da-Sorte WatchKit Extension
//
//  Created by Gabriel Soria Souza on 17/05/20.
//  Copyright © 2020 Gabriel Sória Souza. All rights reserved.
//

import Foundation

enum TypeOfGame: String {
    case last = "Últimos Jogos"
    case next = "Próximos Jogos"
    case settings = "Informações"
}
